--- a/No1.todolist/css/style.css
+++ b/No1.todolist/css/style.css
@@ -4,6 +4,10 @@ body {
   background: url(../img/egg_bg.svg)50% 0 no-repeat fixed;
 }
 
+
+
+
+
 #wrap {
   margin: 0 auto;
   width: 500px;
@@ -68,20 +72,32 @@ button+button {
 .card {
   margin-bottom: 1.2rem;
   border: none;
-  border-bottom: 3px solid #ffbb00;
+  border-bottom: 3px solid #642d00;
   border-radius: .25rem .25rem 0 0;
   box-shadow: 0px 1.5px 7px .5px rgba(90, 40, 0, .14);
 }
 
 .card-header {
-  padding: 1rem 1rem 1rem 1.5rem;
+  padding: .6rem 1rem .6rem 1rem;
   background-color: transparent;
-  border-bottom: .5px solid #ffbb00;
+  border-bottom: .5px solid #642d00;
 }
 
 .card-header a {
   margin-left: 8px;
-  color: rgb(100, 45, 0);
+  font-size: 1.2rem;
+  color: #642d00;
+}
+
+.card-header p {
+  margin-bottom: 0;
+  font-size: .5rem;
+  color: #999;
+  margin-left: 1.7rem;
+}
+
+.card-header button{
+  float: right;
 }
 
 /* .closeCard::after {
@@ -134,7 +150,7 @@ button+button {
 }
 
 .done {
-  border-bottom: 3px solid #999;
+  border-bottom: 3px solid #fff;
   transition: .3s;
   -moz-transition: .3s;
   -webkit-transition: .3s;
@@ -142,16 +158,18 @@ button+button {
 }
 
 .done-header {
-  border-bottom: .5px solid #999;
+  border-bottom: .5px solid #fff;
+  background-color: #28a745;
   transition: .3s;
   -moz-transition: .3s;
   -webkit-transition: .3s;
   -o-transition: .3s;
 }
 
-.done-header a {
+.done-header a,
+.done-header p {
   text-decoration: line-through;
-  color: #999;
+  color: #fff;
   transition: .3s;
   -moz-transition: .3s;
   -webkit-transition: .3s;
@@ -163,4 +181,95 @@ button+button {
   background-color: #c36919;
   border-radius: .5rem .5em 3rem 3rem;
   box-shadow: 0px -3px 20px 3px rgba(165, 60, 0, 0.5) inset, 1px 1px 5px 1px rgba(55, 20, 0, 0.2);
+}
+
+
+/*-----icon-----*/
+
+.fa,
+.fas,
+.far,
+.fal,
+.fab {
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  display: inline-block;
+  font-style: normal;
+  font-variant: normal;
+  text-rendering: auto;
+  line-height: 1;
+}
+
+.fa-lg {
+  font-size: 1.33333em;
+  line-height: 0.75em;
+  vertical-align: -.0667em;
+}
+
+.fa-xs {
+  font-size: .75em;
+}
+
+.fa-sm {
+  font-size: .875em;
+}
+
+.fa-1x {
+  font-size: 1em;
+}
+
+.fa-2x {
+  font-size: 2em;
+}
+
+.fa-3x {
+  font-size: 3em;
+}
+
+.fa-4x {
+  font-size: 4em;
+}
+
+.fa-5x {
+  font-size: 5em;
+}
+
+.fa-6x {
+  font-size: 6em;
+}
+
+.fa-7x {
+  font-size: 7em;
+}
+
+.fa-8x {
+  font-size: 8em;
+}
+
+.fa-9x {
+  font-size: 9em;
+}
+
+.fa-10x {
+  font-size: 10em;
+}
+
+.star-btn{
+  color: #642d00;
+}
+
+.stared{
+  color: #ffbb00;
+}
+
+.fa-star:before {
+  content: "\f005";
+}
+
+.fa-star-half:before {
+  content: "\f089";
+}
+
+.fa-pencil-alt:before {
+  content: "\f303";
 }
