--- a/No1.todolist/css/style.css
+++ b/No1.todolist/css/style.css
@@ -183,7 +183,7 @@ button+button {
 }
 
 .card-header {
-  padding: .6rem 1rem .6rem 1rem;
+  padding: .6rem .7rem .6rem .3rem;
   background-color: rgba(255, 185, 0, 0.5);
   border-bottom: 1px solid #642d00;
   transition: .3s;
@@ -431,14 +431,6 @@ input[placeholder],
   box-shadow: 0px -6px 15px 1px rgba(195, 105, 0, .4) inset, -1px -4px 7px -2px rgba(195, 105, 0, .8) inset, 0px 3px 8px 0px rgba(145, 45, 0, .8);
 }
 
-.edit:hover,
-.delete:hover {
-  width: 2.6rem;
-  height: 2.6rem;
-  margin-top: .2rem;
-  box-shadow: 0px -6px 15px 1px rgba(195, 105, 0, .4) inset, -1px -4px 7px -2px rgba(195, 105, 0, .8) inset, 0px 7px 10px 0px rgba(145, 45, 0, .4);
-}
-
 .edit svg,
 .delete svg {
   margin-left: .1rem;
@@ -446,9 +438,25 @@ input[placeholder],
   color: #642d00;
 }
 
-.edit:hover svg,
-.delete:hover svg {
-  opacity: .4;
+.edit:hover,
+.edit.active,
+
+.delete:hover,
+.delete.active
+ {
+  width: 2.5rem;
+  height: 2.5rem;
+  margin-top: .3rem;
+  box-shadow: 0px -6px 15px 1px rgba(195, 105, 0, .4) inset,
+  0px -4px 6px -2px rgba(195, 105, 0, .8) inset,
+  0px 3px 8px 0px rgba(145, 45, 0, .5),
+  0px 10px 10px 2px rgba(145, 45, 0, .3);
+  }
+
+.edit:focus svg,
+.delete:focus svg
+ {
+  color: #ffbb00;
 }
 
 /*------------------ footer ------------------*/
@@ -467,7 +475,7 @@ input[placeholder],
   color: rgba(195, 105, 25, .4);
 }
 
-#copyright p{
+#copyright p {
   margin-bottom: 0rem;
 }
 
@@ -499,6 +507,7 @@ input[placeholder],
   button+button {
     margin-left: 1rem;
   }
+
   /*------------------ main ------------------*/
   #main {
     padding: 1.5rem 1rem .2rem 1rem;
@@ -508,12 +517,13 @@ input[placeholder],
   }
   .card-header a {
     margin-left: 0rem;
-    font-size: 1rem;
+    font-size: 1.2rem;
   }
   .card-header p {
-    font-size: .2rem;
-    margin-left: 1.3rem;
+    font-size: .5rem;
+    margin-left: 1.6rem;
   }
+
   .star-btn {
     padding-right: .2rem;
   }
@@ -532,9 +542,9 @@ input[placeholder],
   .copyright_line {
     display: none;
   }
-    .copyright_lines {
-      display: block;
-    }
+  .copyright_lines {
+    display: block;
+  }
 }
 
 /*------------------------------------ max-width: 320.98px ------------------------------------*/
@@ -545,13 +555,13 @@ input[placeholder],
   }
   .sesame-l,
   .sesame-r {
-    width: 3.8rem;
-    height: 3.8rem;
+    width: 3.6rem;
+    height: 3.6rem;
     margin-top: 1.6rem;
   }
   .sesame-c {
-    width: 3.8rem;
-    height: 3.8rem;
+    width: 3.6rem;
+    height: 3.6rem;
     margin-top: 2.2rem;
   }
   .sesame-l.active,
@@ -575,10 +585,14 @@ input[placeholder],
   }
   /*------------------ main ------------------*/
   .cancel {
+    padding-right: 0px;
+    padding-left: 0px;
     margin-top: .5rem;
     font-size: .8rem;
   }
   .addTask {
+    padding-right: 0px;
+    padding-left: 0px;
     margin-top: .5rem;
     font-size: .8rem;
   }
