--- a/No1.todolist/css/style.css
+++ b/No1.todolist/css/style.css
@@ -439,23 +439,15 @@ input[placeholder],
 }
 
 .edit:hover,
-.edit.active,
-
-.delete:hover,
-.delete.active
- {
+.delete:hover {
   width: 2.5rem;
   height: 2.5rem;
   margin-top: .3rem;
-  box-shadow: 0px -6px 15px 1px rgba(195, 105, 0, .4) inset,
-  0px -4px 6px -2px rgba(195, 105, 0, .8) inset,
-  0px 3px 8px 0px rgba(145, 45, 0, .5),
-  0px 10px 10px 2px rgba(145, 45, 0, .3);
-  }
+  box-shadow: 0px -6px 15px 1px rgba(195, 105, 0, .4) inset, 0px -4px 6px -2px rgba(195, 105, 0, .8) inset, 0px 3px 8px 0px rgba(145, 45, 0, .5), 0px 10px 10px 2px rgba(145, 45, 0, .3);
+}
 
 .edit:focus svg,
-.delete:focus svg
- {
+.delete:focus svg {
   color: #ffbb00;
 }
 
@@ -507,7 +499,6 @@ input[placeholder],
   button+button {
     margin-left: 1rem;
   }
-
   /*------------------ main ------------------*/
   #main {
     padding: 1.5rem 1rem .2rem 1rem;
@@ -520,10 +511,13 @@ input[placeholder],
     font-size: 1.5rem;
   }
   .card-header p {
-    font-size: 1rem;
+    font-size: .9rem;
     margin-left: 1.6rem;
   }
-
+  .fa-circle,
+  .fa-star {
+    font-size: 1.3rem;
+  }
   .star-btn {
     padding-right: .2rem;
   }
